<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedditShare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sampletitle">Sample Title</string>
    <string name="samplecontent">Sample content sample content sample content sample content sample content</string>
    <string name="search_hint">funny</string>
    <string name="search_title">r/funny</string>
    <string name="share_subtitle_text">CLICK ONE OF THE OPTIONS BELOW TO SHARE THIS POST</string>
    <string name="share_title_text">SHARE THIS!</string>
    <string name="emailtext">Email</string>
    <string name="smstext">SMS</string>
    <string name="emaildesc">b/c your friends need more spam</string>
    <string name="smsdesc">text this post to a friend</string>
    <string name="reddittext">View Post</string>
    <string name="redditdesc">View on Reddit</string>

</resources>
