<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/share_gradient"
        >
        
        <TextView
            android:id="@+id/shareTitle"
            android:text="@string/share_title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="@color/lightgray"
        >
        
        <TextView
            android:id="@+id/shareSubtitle"
            android:text="@string/share_subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="11sp"
            />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/shareEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ultralightgray"
        android:clickable="true"
        android:orientation="horizontal"
        >
        
	        <ImageView 
		        android:id="@+id/emailicon"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_margin="12dp"
		        android:background="@drawable/email_icon"/>
	        
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
	            
	            <TextView
	                android:id="@+id/emailText"
	                android:text="@string/emailtext"
	                android:textSize="18sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="6dp"
	                android:layout_marginTop="20dp"/>
	            
	            <TextView
	                android:id="@+id/emailDesc"
	                android:text="@string/emaildesc"
	                android:textSize="13sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="6dp"
	                android:layout_marginTop="0dp"/>
	            
	        </LinearLayout>
        
    </LinearLayout>
    
    <!-- buttondivider -->
    <View 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/lightgray"/>
    
    <LinearLayout
        android:id="@+id/shareSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ultralightgray"
        android:clickable="true"
        android:orientation="horizontal"
        >
        
	        <ImageView 
		        android:id="@+id/smsicon"
		        android:layout_width="60dp"
		        android:layout_height="60dp"
		        android:layout_margin="12dp"
		        android:background="@drawable/sms_icon"/>
	        
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
	            
	            <TextView
	                android:id="@+id/smsText"
	                android:text="@string/smstext"
	                android:textSize="18sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="6dp"
	                android:layout_marginTop="20dp"/>
	            
	            <TextView
	                android:id="@+id/smsDesc"
	                android:text="@string/smsdesc"
	                android:textSize="13sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="6dp"
	                android:layout_marginTop="0dp"/>
	            
	        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
